<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">拾芥</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_loading">正在加载更多&#8230;</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="inputUserName">请输入用户名</string>
    <string name="inputPhone">请输入手机号</string>
    <string name="inputPassword">请输入密码</string>
    <string name="inputrePassword">重复输入密码</string>
    <string name="remenberPassword">记住密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="waitEvaluate">待评价</string>
    <string name="passwordTips">6-15个字符，区分大小写</string>
    <string name="changePasswordSuccess">修改密码成功</string>
    <string name="confirmLogOut">确认退出？</string>
    <string name="clickRefresh">触摸屏幕刷新</string>
    <string name="beingQueried">正在查询&#8230;</string>
    <string name="query">搜索</string>

    <!-- 发表 -->
    <string name="commonTitleBar_tv_title">发表主题</string>
    <string name="btn_publish">发布</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="activity_supervise_fragment_search">请输入你关心的话题</string>
    <string name="activity_search_supervise_hint">搜索</string>
    <string name="activity_search_supervise_no">没有符合条件的话题</string>
    <!-- 我的 -->
    <string name="tv_username">---</string>
    <string name="tv_publish">状态</string>
    <string name="tv_attention">话题</string>
    <string name="tv_favorite">收藏</string>
    <string name="tv_comment">评论</string>
    <string name="tv_set">设置</string>
    <string name="about">关于我们</string>
    <string name="changePassword">修改密码</string>
    <string name="logOut">注销登录</string>
    <string name="myEvaluation">我的评价</string>
    <string name="oldPassword">旧密码</string>
    <string name="newPassword">新密码</string>
    <string name="reEnterNewPassword">再次输入新密码</string>
    <string name="delete">删除</string>
    <string name="noSatus">暂无发布的状态</string>
    <string name="noTpic">暂无发布的话题</string>
    <string name="noFav">暂无收藏的状态</string>

    <!-- 拾芥 -->
    <string name="rb_seek">拾芥</string>
    <string name="rb_receive">状态</string>
    <string name="noData">暂无数据</string>
    <string name="noTopicStatus">该话题下暂无发布的状态</string>

    <!-- 消息 -->
    <string name="tv_reply">消息</string>
    <string name="tv_msg">私聊</string>
    <string name="noMsg">暂无消息</string>
    <!-- 话题 -->
    <string name="rb_new">最新话题 </string>
    <string name="rb_hit">最热话题</string>
    <string name="noNewTopic">暂无最新话题</string>
    <string name="noHitTopic">暂无最热话题</string>

</resources>