<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/palelightgray"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginTop="@dimen/space_20"
        android:text="@string/oldPassword"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_16" />

    <EditText
        android:id="@+id/et_oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_5"
        android:background="@drawable/gcd"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/passwordTips"
        android:paddingBottom="@dimen/space_10"
        android:paddingLeft="@dimen/space_15"
        android:paddingTop="@dimen/space_10"
        android:password="true"
        android:textSize="@dimen/text_size_15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginTop="@dimen/space_5"
        android:text="@string/newPassword"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_16" />

    <EditText
        android:id="@+id/et_newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_5"
        android:background="@drawable/gcd"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/passwordTips"
        android:paddingBottom="@dimen/space_10"
        android:paddingLeft="@dimen/space_15"
        android:paddingTop="@dimen/space_10"
        android:password="true"
        android:textSize="@dimen/text_size_15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_15"
        android:layout_marginTop="@dimen/space_5"
        android:text="@string/reEnterNewPassword"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_16" />

    <EditText
        android:id="@+id/et_reEnterNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_5"
        android:background="@drawable/gcd"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/passwordTips"
        android:paddingBottom="@dimen/space_10"
        android:paddingLeft="@dimen/space_15"
        android:paddingTop="@dimen/space_10"
        android:password="true"
        android:textSize="@dimen/text_size_15" />

    <Button
        android:id="@+id/btn_determine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginTop="@dimen/space_20"
        android:background="@drawable/selector_login_btn"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18" />

</LinearLayout>