<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/space_10"
    android:background="@drawable/corners_blue"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/space_5"
        android:text="@string/confirmLogOut"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/space_18" >

        <Button
            android:id="@+id/btn_dialog_logout_cancle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_1"
            android:layout_weight="1"
            android:background="@drawable/selector_dialog_confirmandcancle"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18" />

        <Button
            android:id="@+id/btn_dialog_logout_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_1"
            android:layout_weight="1"
            android:background="@drawable/selector_dialog_confirmandcancle"
            android:text="@string/confirm"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>

</LinearLayout>